# opentelemetry-instrumentation-asgiref

./: LICENSE  README.rst  pyproject.toml
src/opentelemetry/instrumentation/asgiref/: __init__.py
tests/: requirements.txt  test_instrumention.py
