[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-asgiref"
dynamic = ["version"]
description = "asgiref instrumentation for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
  { name = "Riccardo Magliocchetti", email = "riccardo.magliocchetti@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "asgiref ~= 3.0",
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.45b0",
  "opentelemetry-semantic-conventions == 0.45b0",
]

[project.optional-dependencies]
instruments = [
  "asgiref ~= 3.0",
]
test = [
  "opentelemetry-instrumentation-asgiref[instruments]",
  "opentelemetry-test-utils == 0.45b0",
]

[project.urls]
Homepage = "https://github.com/xrmx/opentelemetry-instrumentation-asgiref/"

[project.entry-points.opentelemetry_instrumentor]
asgiref = "opentelemetry.instrumentation.asgiref:AsgirefInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/asgiref/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
